Thu Feb 14 13:05:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Context_Impl_Base.h:
        * ciao/Dynamic_Component_Activator.cpp:
        * ciao/Dynamic_Component_Activator.h:
        * ciao/Dynamic_Component_Servant_T.h:
        * ciao/Home_Servant_Impl_Base.cpp
        * ciao/Home_Servant_Impl_Base.h:
        * ciao/ome_Servant_Impl_T.cpp:
        * ciao/Home_Servant_Impl_T.h:
        * ciao/Object_Set_T.h:
        * ciao/Port_Activator_T.cpp
        * ciao/Port_Activator_T.h:
        * ciao/Servant_Impl_Utils_T.cpp:
        * ciao/StandardConfigurator_Impl.cpp:
        * ciao/StandardConfigurator_Impl.h:
        * ciao/Swapping_Container.cpp:
        * ciao/Swapping_Servant_Home_Impl_T.h:
        * ciao/Upgradeable_Context_Impl_T.h:
          Layout changes

        * ciao/Cookies.cpp:
        * ciao/Cookies.inl:
          Don't inline virtual destructors

Thu Feb 14 12:51:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Context_Impl_Base.cpp:
          Just let resolve_service_reference throw not implemented,
          need some more work

Thu Feb 14 12:22:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Container_Base.cpp:
        * ciao/Container_Base.h:
        * ciao/Session_Container.cpp:
        * ciao/Session_Container.h:
        * ciao/Session_Container.inl:
          Moved Session_Container to its own file

        * ciao/Container_Base.inl:
          Removed, not needed anymore

        * ciao/CCM_Context.idl:
          Added resolve_service_reference

        * ciao/CCM_Core.mpc:
          Added new Session_Container

        * ciao/Context_Impl_Base.cpp:
        * ciao/Context_Impl_Base.h:
          Layout changes and implemented resolve_service_reference

        * ciao/Context_Impl_T.cpp:
        * ciao/Context_Impl_T.h:
        * ciao/Port_Activator.h:
        * ciao/Port_Activator_T.h:
        * ciao/Servant_Impl_Base.cpp:
        * DAnCE/ExecutionManager/Execution_Manager.cpp: